--- a/styls/styles.css
+++ b/styls/styles.css
@@ -5,3 +5,9 @@ div{
     background-color: cyan;
     box-shadow: 10px 10px 20px;
 }
+.dv{
+    display: inline-block;
+}
+.dvv{
+    text-align: center;
+}
