changed something in css

--- a/styls/styles.css
+++ b/styls/styles.css
@@ -6,8 +6,5 @@ div{
     box-shadow: 10px 10px 20px;
 }
 .dv{
-    display: inline-block;
-}
-.dvv{
-    text-align: center;
-}
+    display: inline-block;}
+    
