trying fix error in live website

--- a/styls/styles.css
+++ b/styls/styles.css
@@ -4,7 +4,7 @@ div{
     border-radius: 20px;
     background-color: cyan;
     box-shadow: 10px 10px 20px;
-}
+    }
 .dv{
-    display: inline-block;}
-    
+    display: inline-block;
+    }
